# ntfyDesktop

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  moe.emmaexe.ntfyDesktop.desktop.in  ntfyDesktop.notifyrc.in  package-lock.cmake  settings.gradle  toolchain-aarch64.cmake  toolchain-x86_64.cmake
.github/: renovate.json
app/: build.gradle  moe.emmaexe.ntfyDesktop.desktop.in  moe.emmaexe.ntfyDesktop.metainfo.xml.in  moe.emmaexe.ntfyDesktop.notifyrc.in
app/resources/: defaultConfig.json  resources.qrc
app/src/: ntfyDesktop.cpp  ntfyDesktop.hpp.in
app/src/Config/: Config.cpp  Config.hpp
app/src/DataBase/: DataBase.cpp  DataBase.hpp
app/src/ErrorWindow/: ErrorWindow.cpp  ErrorWindow.hpp  ErrorWindow.ui
app/src/FileManager/: FileManager.cpp  FileManager.hpp  FileManagerException.cpp  FileManagerException.hpp
app/src/HistoryDialog/: HistoryDialog.cpp  HistoryDialog.hpp  HistoryDialog.ui  HistorySettingsDialog.cpp  HistorySettingsDialog.hpp  HistorySettingsDialog.ui  NotificationListItem.cpp  NotificationListItem.hpp  NotificationListItem.ui
app/src/ImportDialog/: ImportDialog.cpp  ImportDialog.hpp  ImportDialog.ui
app/src/MainWindow/: ConfigTab.cpp  ConfigTab.hpp  ConfigTab.ui  MainWindow.cpp  MainWindow.hpp  MainWindow.ui
app/src/NotificationManager/: NotificationManager.cpp  NotificationManager.hpp  NtfyNotification.cpp  NtfyNotification.hpp
app/src/NotificationStore/: NotificationStore.cpp  NotificationStore.hpp
app/src/PreferencesDialog/: PreferencesDialog.cpp  PreferencesDialog.hpp  PreferencesDialog.ui
app/src/ProtocolHandler/: ProtocolHandler.cpp  ProtocolHandler.hpp  ProtocolParseException.cpp  ProtocolParseException.hpp
app/src/SingleInstanceManager/: SingleInstanceManager.cpp  SingleInstanceManager.hpp
app/src/ThreadManager/: NtfyThread.cpp  NtfyThread.hpp  NtfyWorker.cpp  NtfyWorker.hpp  ThreadManager.cpp  ThreadManager.hpp
app/src/UnixSignalHandler/: UnixSignalHandler.cpp  UnixSignalHandler.hpp
app/src/Util/: Curl.cpp  Curl.hpp  Curl.tpp  FileManager.cpp  FileManager.hpp  Logging.cpp  Logging.hpp  ParsedURL.cpp  ParsedURL.hpp  Util.cpp  Util.hpp
app/src/main/java/moe/emmaexe/ntfyDesktop/: NotificationThread.java  NtfyDesktopApp.java
app/src/main/java/moe/emmaexe/ntfyDesktop/utils/: Config.java  FileManager.java  LogManager.java  StringUtils.java  Terminal.java  TimeManager.java
app/src/main/resources/: config.json  config.schema.json
assets/: ntfyDesktop-banner.kra
configurator/: makefile  ntfyDesktopConfigurator.cpp  programInfo.h  resources.xml
configurator/config/: config.cpp  config.h
configurator/errorApplication/: errorApplication.cpp  errorApplication.h
configurator/errorApplication/errorWindow/: errorWindow.cpp  errorWindow.h
configurator/mainApplication/: mainApplication.cpp  mainApplication.h  mainApplication.ui
configurator/mainApplication/mainWindow/: mainWindow.cpp  mainWindow.h  notebookTab.cpp  notebookTab.h  notebookTab.ui  toolbar.ui
scripts/: README.md
scripts/arch/: PKGBUILD
scripts/fedora/: Dockerfile  build.sh
scripts/ubuntu/: Dockerfile  build.sh
